--- a/savvyvan/proj/webapp/templates/base.html
+++ b/savvyvan/proj/webapp/templates/base.html
@@ -74,22 +74,25 @@
               </ul>
             </div>
           </nav>
-        <ul id="slide-out" class="sidenav">
-               
-            {% for file in data.menu_python_files %}
-            <li class="sidebar_run_python_file" style="cursor: pointer;" data-file_name="{{file}}" >
-                <a >
-                    <span class="left">
-                        {{file.split('.')[0]}}
-                    </span>
-                    <!-- <i class="waves-effect material-icons right green-text sidebar_run_python_file" data-file_name="{{file}}" >play_arrow</i> -->
-                </a>
-                
-            </li> 
-              
-            {% endfor %}
-
-        </ul>
+        <div id="slide-out" class="sidenav">
+            <ul>
+        
+                {% for file in data.menu_python_files %}
+                <li class="sidebar_run_python_file" style="cursor: pointer;" data-file_name="{{file}}">
+                    <a>
+                        <span class="left">
+                            {{file.split('.')[0]}}
+                        </span>
+                        <!-- <i class="waves-effect material-icons right green-text sidebar_run_python_file" data-file_name="{{file}}" >play_arrow</i> -->
+                    </a>
+        
+                </li>
+        
+                {% endfor %}
+        
+            </ul>
+        
+        </div>
 
 
  
@@ -102,7 +105,20 @@
         
       {% endblock content %}
 
+      <br>
 
+      <div style="text-align: center">
+      {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <ul class=flashes>
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+            </ul>
+        {% endif %}
+      {% endwith %} 
+      </div>
+      
 
  <footer class="{{data.tile_colors.0}} {{data.tile_colors.2}}">
     <img src="/static/img/logo.png" alt="" class="">
@@ -166,6 +182,7 @@ $.ajax({
 
    
 $('.sidebar_run_python_file').click(function(){
+    console.log('sidebar_run_python_file begin');
     var file_name = $(this).data('file_name');
     $.ajax({ 
         url: "/sidebar_run_python_file",
@@ -175,6 +192,9 @@ $('.sidebar_run_python_file').click(function(){
 
         }
     })
+    $('.sidenav').sidenav('close');
+    console.log('sidebar_run_python_file end');
+    
 })
 
 
