--- a/savvyvan/proj/webapp/templates/base.html
+++ b/savvyvan/proj/webapp/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Control Panel</title>
+        <title>SavvyVan Control Panel</title>
 
         <script type="application/javascript" src="/static/js/jquery-3.6.0.min.js"></script>
 
@@ -9,7 +9,7 @@
         <script type="application/javascript" src="/static/js/kioskboard.js"></script> 
         <link rel="stylesheet" href="/static/css/kioskboard.css">
         
-        <link rel="shortcut icon" href="/static/img/logo.png" type="image/x-icon">
+        <link rel="shortcut icon" href="/static/img/Profile_transparent_small.png" type="image/x-icon">
 
         <script type="application/javascript" src="/static/js/battery.js"></script>
         <script type="application/javascript" src="/static/js/charts.js.js"></script>
