--- a/savvyvan/proj/webapp/templates/weather-widget.html
+++ b/savvyvan/proj/webapp/templates/weather-widget.html
@@ -18,7 +18,7 @@
  <!-- Modal Structure -->
  <div id="city_modal" class="modal" style="width: 35% !important">
     <div class="modal-content">
-        <input id="new_geo_location_city" type="text" class="browser-default input_x1 virtual-keyboard form-control" data-kioskboard-type="all" data-kioskboard-specialcharacters="true" placeholder="Network SSID" style="width: 100%;"> <br><br>
+        <input id="new_geo_location_city" type="text" class="browser-default input_x1 virtual-keyboard form-control" data-kioskboard-type="all" data-kioskboard-specialcharacters="true" placeholder="City Name" style="width: 100%;"> <br><br>
 
         <button class="btn left {{data.tile_colors.0}} {{data.tile_colors.2}}" id="save_geo_location_city"  style="width: 100% !important">Save City</button>
         <br>
