Icon font size increased, graph min max calculated

--- a/savvyvan/proj/webapp/templates/base.html
+++ b/savvyvan/proj/webapp/templates/base.html
@@ -59,13 +59,13 @@
             <div class="nav-wrapper {{data.tile_colors.0}} {{data.tile_colors.2}}">
 
               <a  id="current-time" class="brand-logo center">0</a>
-                    <a href="#" data-target="slide-out" class="sidenav-trigger show-on-large"><i class="material-icons">menu</i></a>
+                    <a href="#" data-target="slide-out" class="sidenav-trigger show-on-large"><i class="material-icons" style="font-size: 60px;">menu</i></a>
                     <ul id="nav-mobile" class="left hide-on-med-and-down"> 
                     </ul>
               <ul id="nav-mobile" class="right ">
-                <li><a href="/"><i class="material-icons">home</i></a></li> 
+                <li><a href="/"><i class="material-icons" style="font-size: 60px;">home</i></a></li> 
                 <!-- <li><a href="/settings-page"><i class="material-icons">settings</i></a></li> -->
-                <li><a href="/wifi-settings-page"><i class="material-icons" id="wifi_settings_icon">wifi</i></a></li>
+                <li><a href="/wifi-settings-page"><i class="material-icons" id="wifi_settings_icon" style="font-size: 60px;">wifi</i></a></li>
                 {% if data.display_external_link_icon %}
                   
                 <li><a href="http://webapp.savvyvan.co.uk" target="blank"><i class="material-icons">near_me</i></a></li>
