--- a/savvyvan/proj/webapp/templates/base.html
+++ b/savvyvan/proj/webapp/templates/base.html
@@ -44,7 +44,7 @@
         margin-bottom:50px;
     }
     #current-time{
-        font-size: 50px !important;
+        font-size: 60px !important;
     }
     .btn{
         text-transform: none !important;
@@ -59,13 +59,13 @@
             <div class="nav-wrapper {{data.tile_colors.0}} {{data.tile_colors.2}}">
 
               <a  id="current-time" class="brand-logo center">0</a>
-                    <a href="#" data-target="slide-out" class="sidenav-trigger show-on-large"><i class="material-icons" style="font-size: 60px;">menu</i></a>
+                    <a href="#" data-target="slide-out" class="sidenav-trigger show-on-large"><i class="material-icons" style="font-size: 50px;">menu</i></a>
                     <ul id="nav-mobile" class="left hide-on-med-and-down"> 
                     </ul>
               <ul id="nav-mobile" class="right ">
-                <li><a href="/"><i class="material-icons" style="font-size: 60px;">home</i></a></li> 
+                <li><a href="/"><i class="material-icons" style="font-size: 40px;">home</i></a></li> 
                 <!-- <li><a href="/settings-page"><i class="material-icons">settings</i></a></li> -->
-                <li><a href="/wifi-settings-page"><i class="material-icons" id="wifi_settings_icon" style="font-size: 60px;">wifi</i></a></li>
+                <li><a href="/wifi-settings-page"><i class="material-icons" id="wifi_settings_icon" style="font-size: 40px;">wifi</i></a></li>
                 {% if data.display_external_link_icon %}
                   
                 <li><a href="http://webapp.savvyvan.co.uk" target="blank"><i class="material-icons">near_me</i></a></li>
@@ -123,7 +123,7 @@
  <footer class="{{data.tile_colors.0}} {{data.tile_colors.2}}">
     <img src="/static/img/logo.png" alt="" class="">
 
-    <a href="/settings-page"><i class="waves-effect material-icons white-text" >settings</i></a>
+    <a href="/settings-page"><i class="waves-effect material-icons white-text" style="font-size: 40px;">settings</i></a>
 </footer>
 
 
