Weather data loaded in main page, reload page after commit wifi, removed save message

--- a/savvyvan/proj/webapp/templates/wifi_settings.html
+++ b/savvyvan/proj/webapp/templates/wifi_settings.html
@@ -68,7 +68,7 @@
             url: "/wifi_settings_page_run_py_file",
             method: "GET", 
             success: function(res){
-                //location.reload()
+                location.reload()
             }
         })
     })
