--- a/savvyvan/proj/webapp/templates/wifi_settings.html
+++ b/savvyvan/proj/webapp/templates/wifi_settings.html
@@ -50,7 +50,7 @@
             </div>
 
             <br>
-            <button id="wifi_settings_page_run_py_file" class="btn left {{data.tile_colors.0}} {{data.tile_colors.2}}" style="width: 100%;"> Commit Chnages</button>
+            <button id="wifi_settings_page_run_py_file" class="btn left {{data.tile_colors.0}} {{data.tile_colors.2}}" style="width: 100%;"> Commit Changes</button>
         </div>
 
 
