Tidy Up display

--- a/savvyvan/proj/webapp/templates/base.html
+++ b/savvyvan/proj/webapp/templates/base.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="/static/css/materialize.css">
         <link rel="stylesheet" href="/static/css/fawesome.css">
         <link rel="stylesheet" href="/static/css/battery.css">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="/static/css/material-icons.css" rel="stylesheet">
 
         <link rel="stylesheet" href="/static/css/font.css">
 
