email change and add scrolling text

--- a/savvyvan/proj/webapp/templates/base.html
+++ b/savvyvan/proj/webapp/templates/base.html
@@ -121,8 +121,8 @@
       
 
  <footer class="{{data.tile_colors.0}} {{data.tile_colors.2}}">
-    <img src="/static/img/logo.png" alt="" class="">
-
+    <img src="/static/img/logo.png" alt="" class=""> 
+    <marquee width = "60%" style="font-size: 22px;">{{data.notification}}</marquee>
     <a href="/settings-page"><i class="waves-effect material-icons white-text" style="font-size: 40px;">settings</i></a>
 </footer>
 
