Revert "Revert "Merge branch 'development' of https://github.com/bankmil/ControlPanel_lite into development""
This reverts commit 4212d15139e121acb7e2d369b1962a68530d8f5c.

--- a/savvyvan/proj/webapp/templates/title.html
+++ b/savvyvan/proj/webapp/templates/title.html
@@ -46,7 +46,7 @@
     <!-- This is title div -->
     <div class="center_object">
         <span class="title_text">
-            Optional Titles
+            <!--Optional Titles -->
         </span> 
     </div>
     
@@ -65,7 +65,7 @@
                     
                     {% endif %}
                     
-                    <span class="enlarge_text">Battery Power</span>
+                    <span class="enlarge_text">Battery Management</span>
                 </label>
             </div>
             
